--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
 Django==2.1.7
 django-bootstrap-modal-forms==1.3.1
+django-extra-views==0.12.0
+django-funky-sheets==0.1.2
 django-widget-tweaks==1.4.3
 pytz==2018.9
+six==1.12.0
