--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,6 @@ django-environ==0.4.5
 django-extra-views==0.12.0
 django-funky-sheets==0.1.2
 django-widget-tweaks==1.4.3
+gunicorn==19.9.0
 pytz==2018.9
 six==1.12.0
